--- a/San_Francisco_Crime_Statistics_With_Code.ipynb
+++ b/San_Francisco_Crime_Statistics_With_Code.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that period with the lowest resolution rate is 6-9pm. This appears to be in part related to the fact that \n",
+    "We can see that period with the lowest resolution rate is 6-10pm (since the '21' bar includes everything that happened between 9pm and 10pm). This appears to be in part related to the fact that \n",
     "there is a very high number of incidences in this time period. However, note that the number of incidences decreases from\n",
     "6pm to 9pm but the resolution rate also decreases. So, even though the number of incidences is decreasing, the resolution rate\n",
     "is getting worse."
@@ -313,7 +313,7 @@
    "metadata": {},
    "source": [
     "To conclude:\n",
-    "- The time period with the lowest resolution rate is 6pm to 9pm, appearing to be due in part to the high number of incidences in this period.\n",
+    "- The time period with the lowest resolution rate is 6pm to 10pm, appearing to be due in part to the high number of incidences in this period.\n",
     "- The districts with the lowest resolution rates are Central, Ingleside, Northern, Richmond and Taraval.\n",
     "- The crimes with the lowest resolution rates are Burglary, Larceny/Theft, Pornography/obscene material and vehicle theft. In the case of larceny/theft and vehicle theft, this appears to be partly due to very high incidence rates."
    ]
